--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
+  "description": "Basic HelloWorld with React, grunt and browserify",
+  "repository": "https://",
   "devDependencies": {
     "react": "^0.11.2",
     "grunt": "^0.4.5",
-    "grunt-contrib-copy": "^0.7.0"
+    "grunt-contrib-copy": "^0.7.0",
+    "grunt-browserify": "^3.1.0"
   }
 }
